changed CSS to fix being too long on mobile

--- a/static/app.css
+++ b/static/app.css
@@ -1,5 +1,6 @@
 html, body {
-    margin: 0;
+    margin: 0 auto;
+    height: 100vh;
 }
 .container {
     display:flex;
